fix: horizontal scroll bar not visible on answer page

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1036,7 +1036,18 @@ table.table-fixedwidth td, .table-fixedwidth th {
   background: #FFFFFF;
   padding: 12px;
   border-radius: 7px;
+}
 
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  /*width: 7px;*/
+  height: 7px;
+  width: 7px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .5);*/
+  -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
 }
 
 .logout-text {
